<resources>
    <string name="app_name">group-project-group-8</string>
    <string name="username">Username:</string>
    <string name="usernameHint">Username</string>
    <string name="login">Login</string>
    <string name="accounts">Accounts</string>
    <string name="returns">Returns</string>
    <string name="platformString">Platform</string>
    <string name="dummyAmountString">$1000</string>
    <string name="performance_data_String">Performance Data</string>
    <string name="asset_ticker">Asset Ticker</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="buy_sell">Buy/Sell</string>
    <string name="save">Save</string>
    <string name="homeString">Home</string>
    <string name="accountsString">Accounts</string>
    <string name="granulrString">Granulr</string>
    <string name="logoString">Logo</string>
    <string name="unify_visualize_master_your_finances_string">Unify, Visualize, Master Your Finances</string>
</resources>