<!-- dialog_add_account.xml -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Asset Ticker -->
    <EditText
        android:id="@+id/editTextAssetTicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/asset_ticker"
        app:layout_constraintBottom_toTopOf="@+id/editTextCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Save Button -->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtonBuySell" />

    <ToggleButton
        android:id="@+id/toggleButtonBuySell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_sell"
        android:textOff="@string/sell"
        android:textOn="@string/buy"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCount" />

    <EditText
        android:id="@+id/editTextCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="count"
        app:layout_constraintBottom_toTopOf="@+id/toggleButtonBuySell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAssetTicker" />
</androidx.constraintlayout.widget.ConstraintLayout>
